# nmag-src

./: .gitignore  .hgtags  Makefile  Makefile.in  OCamlMakefile  README  README.md  STYLE  changelog.txt  configure.py  makedoc.sh  ocaml-exports.bash  subst.py.in
admin/: README  VERSIONING  VERSIONS  _relbld.bash  autotest.sh  build-core.bash  choice.py  confirm-release.py.in  distmake-builder.py  disttools.sh  gen-tarballs.sh  new-release.py  repositories.conf  repositories.py  settings.conf  version.py
base/: META  Makefile  ba.ml  ba.mli  ba_stubs.c  base.ml  deferred.ml  deferred.mli
bem3d/: META  Makefile  bem3d.ml  bem3d.mli
ccpla/: Makefile  ccpla.ml
config/: META  Makefile  arch.py.in  common.inc  configure-old.py  configure.py  find_configuration.sh  petsc_detect.pl  test.py
config/ac/: Makefile.maintainer  configure  configure.ac
ddpla/: Makefile  ddpla.ml  ddpla.mli
fastfields/: Makefile  fastfields_stubs.c
fem/: Makefile  ddiffop_test.ml  fem.ml  fem.mli
hlib/: Makefile  hlib.ml  hlib.mli  hlib_stubs.c  hlib_stubs.h
interface/: Makefile.in  nbase.py
mesh/: META  Makefile  correct_broken_mesh.ml  experiments.ml  find_interface_points_to_add.ml  mesh.ml  mesh.mli  mesh0.ml  mesh0.mli  mesh_io.ml  periodic.mli  simplex.ml  simplex.mli
mpi_petsc/: META  Makefile  collcomm.c  comm.c  mpi.mli  mpi_test_tf_basic.ml  msgs.c  parmetis.ml  petsc.ml  petsc_debug_call_on_rows.ml  petsc_error.pl  petsc_stubs.c
mt19937/: META  Makefile  mt19937.ml
nlog/: Makefile  nlog.ml  nlog.mli
nsim/: META  Makefile  nsim.ml  nsim.mli
nsim_fem/: Makefile  (+2 more)
(+529 files in other folders)
